--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ body{
     position: absolute;
     width: 100%;
     height: 100%;
+    clip-path: circle(0% at 0 50%);
+}
+.slider .slide.active{
+    clip-path: circle(150% at 0 50%);
+    transition: 1s;
 }
 
 .slider .slide img{
@@ -102,4 +107,7 @@ body{
     transform: translateY(-20px);
     cursor: pointer;
     transition: 0.3s ease;
+}
+.navigation-visibility .slide-icon.active{
+    background-color: #000116ab;
 }
